tests/error/modifier_errors/higher_order_daggerable_missing_flag.err
Error: Missing protocol implementation (at $FILE:17:17)
   | 
15 | @guppy
16 | def test(q: qubit) -> None:
17 |     apply_dagger(no_flags, q)
   |                  ^^^^^^^^ Type `def no_flags(q: qubit) -> None` does not implement
   |                           protocol `Daggerable[[qubit], None]`

Note: Function `no_flags` is not declared as `daggerable=True`

Guppy compilation failed due to 1 previous error
